--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body style="padding: 0; margin: 0; width: 100vw; height: 100vh;">
+<body style="padding: 0; margin: 0; width: 100vw; height: 100vh; overflow: hidden;">
     <canvas></canvas>
     <script src="dist/index.js"></script>
 </body>
